# RP2350_Pizero_2CH_CAN_HAT

./: .gitignore  LICENSE  README.md
C demo/: CMakeLists.txt  main.c  mcp2515.c  mcp2515.h  pico_sdk_import.cmake
micropython/: main.py  mcp2515.py
